# python-for-data-science-notes

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt
01-Python-Crash-Course/: 01-Python Crash Course.ipynb  01-Python-Crash-Course.ipynb  02-Python-Examples.ipynb  02-Python_Examples.ipynb
02-Numpy/: 00-Arrays.ipynb  00-NumPy-Arrays.ipynb  01-Indexing-and-Selection.ipynb  01-NumPy-Indexing-and-Selection.ipynb  02-NumPy-Operations.ipynb  02-Operations.ipynb  03-Exercises.ipynb  03-NumPy-Exercises.ipynb
03-Pandas/: 00-Series.ipynb  01-DataFrames.ipynb  02-Conditional-Filtering.ipynb  03-Useful-Methods.ipynb  04-Missing-Data.ipynb  05-Groupby-Operations-and-MultiIndex.ipynb  06-Combining-DataFrames.ipynb  07-Text-Methods.ipynb  08-Time-Methods.ipynb  09-Inputs-and-Outputs.ipynb  10-Pivot-Tables.ipynb  11-Pandas-Project-Exercise-Solution.ipynb
04-Matplotlib/: 00-Matplotlib-Basics.ipynb  01-Matplotlib-Figures.ipynb  02-Matplotlib-SubPlots.ipynb  03-Matplotlib-Styling-Plots.ipynb  04-Matplotlib-Exercises.ipynb  05-Additional-Matplotlib-Commands.ipynb
src/: __init__.py
src/chapter_01/: 01_data_types.ipynb  02_control_flow.ipynb  03_functions.ipynb  README.md  __init__.py
src/chapter_02/: 01_arrays.ipynb  02_indexing_and_selection.ipynb  03_operations.ipynb  README.md  __init__.py
src/chapter_03/: 01_series.ipynb  02_dataframes.ipynb  03_conditional_filtering.ipynb  04_useful_methods.ipynb  05_missing_data.ipynb  06_groupby_and_aggregation.ipynb  (+7 more)
tests/: conftest.py
(+66 files in other folders)
