[tool.poetry]
name = "python-for-data-science-notes"
version = "0.1.0"
description = "Study notes and interactive Jupyter notebooks for Python Data Science — from fundamentals through NumPy, Pandas, Matplotlib, and Seaborn"
authors = ["Leandro Mana <leandromana@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0"
pandas = "^2.2"
matplotlib = "^3.9"
seaborn = "^0.13"
openpyxl = "^3.1"
lxml = "^5.0"
fastparquet = "^2024.0"
sqlalchemy = "^2.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.0"
ipykernel = "^6.0"
jupyterlab = "^4.0"
pytest = "^8.0"
ruff = "^0.4"
mypy = "^1.0"
pre-commit = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
